--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ isort==4.3.4
 itsdangerous==1.1.0
 jedi==0.12.1
 jeepney==0.4
-Jinja2==2.10
+Jinja2>=2.10.1
 jmespath==0.9.4
 JSAnimation==0.1
 jsonpickle==1.1
@@ -54,7 +54,7 @@ nbconvert==5.3.1
 nbformat==4.4.0
 ndg-httpsclient==0.5.1
 nose==1.3.7
-notebook==5.5.0
+notebook>=5.7.8
 numpy==1.15.0
 oauthlib==3.0.1
 paramiko==2.4.2
@@ -82,7 +82,7 @@ python-nmap==0.6.1
 pytz==2019.1
 pyzmq==17.0.0
 qtconsole==4.3.1
-requests==2.19.1
+requests>=2.20.0
 requests-oauthlib==1.2.0
 ruamel.yaml==0.15.89
 SecretStorage==3.1.1
@@ -98,7 +98,7 @@ tqdm==4.24.0
 traitlets==4.3.2
 typed-ast==1.3.1
 Unidecode==1.0.23
-urllib3==1.23
+urllib3>=1.24.2
 virtualenv==16.0.0
 wcwidth==0.1.7
 webencodings==0.5.1
